--- a/SQLite/Projects/msvc8/SQLite.vcproj
+++ b/SQLite/Projects/msvc8/SQLite.vcproj
@@ -17,8 +17,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="..\..\..\tmp\$(ConfigurationName)"
+			IntermediateDirectory="..\..\..\tmp\$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -78,8 +78,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="..\..\..\tmp\$(ConfigurationName)"
+			IntermediateDirectory="..\..\..\tmp\$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
 			ManagedExtensions="0"
