--- a/SQLite/Projects/msvc8/SQLite.vcproj
+++ b/SQLite/Projects/msvc8/SQLite.vcproj
@@ -102,6 +102,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				WholeProgramOptimization="false"
 				PreprocessorDefinitions="_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
