- Gem now has an public attribute 'replacers', which is used by out.applyTo - InputRule now uses internally the TableRow class - InputRule.addGem now return created gem.cpp - InputRule is tied to an OutputFormat - InputRule does not use Replacements anymore - Replacements are now identified via 'ownerId' and 'name' - removed parentPtr in Replacements - TableRow has new constructor, which ensures that rowid has a value

--- a/renamer/Projects/CodeBlocks/Renamer.cbp
+++ b/renamer/Projects/CodeBlocks/Renamer.cbp
@@ -75,6 +75,8 @@
 			<Option target="Debug" />
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="..\..\Source\outputFormat.cpp" />
+		<Unit filename="..\..\Source\outputFormat.h" />
 		<Unit filename="..\..\Source\replacement.cpp" />
 		<Unit filename="..\..\Source\replacement.h" />
 		<Unit filename="..\..\Source\replacements.cpp" />
