--- a/renamer/Projects/CodeBlocks/Renamer.cbp
+++ b/renamer/Projects/CodeBlocks/Renamer.cbp
@@ -42,6 +42,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-W" />
+					<Add option="-g" />
 					<Add option="-DRENAMER_UNIT_TEST" />
 				</Compiler>
 				<Linker>
