--- a/Renamer .NET/Renamer .NET.vcproj
+++ b/Renamer .NET/Renamer .NET.vcproj
@@ -107,7 +107,7 @@
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="1"
-			WholeProgramOptimization="0"
+			WholeProgramOptimization="3"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -126,10 +126,15 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="&quot;..\renamer\Source&quot;;&quot;..\SQLite\Source&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
+				FloatingPointModel="2"
+				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -154,6 +159,7 @@
 				AdditionalLibraryDirectories="&quot;..\SQLite\bin&quot;;&quot;..\bin&quot;"
 				GenerateDebugInformation="false"
 				SubSystem="2"
+				LinkTimeCodeGeneration="1"
 				EntryPointSymbol="main"
 				TargetMachine="1"
 				Profile="false"
