--- a/SQLite/Projects/CodeBlocks/SQLite.cbp
+++ b/SQLite/Projects/CodeBlocks/SQLite.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="..\..\bin\libSQLite.a" prefix_auto="1" extension_auto="1" />
+				<Option output="..\..\bin\libSQLite-d.a" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj\Debug\" />
 				<Option type="2" />
@@ -18,7 +18,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="libSQLite.a" prefix_auto="1" extension_auto="1" />
+				<Option output="..\..\bin\libSQLite.a" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj\Release\" />
 				<Option type="2" />
@@ -31,7 +31,24 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="Profiling">
+				<Option output="..\..\bin\libSQLite-p.a" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="obj\Profiling\" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-pg" />
+				</Compiler>
+				<Linker>
+					<Add option="-pg -lgmon" />
+				</Linker>
+			</Target>
 		</Build>
+		<VirtualTargets>
+			<Add alias="ALL" targets="Debug;Release;Profiling;" />
+		</VirtualTargets>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
