--- a/renamer/Projects/CodeBlocks/Renamer.cbp
+++ b/renamer/Projects/CodeBlocks/Renamer.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="..\..\bin\Renamer-d.exe" prefix_auto="1" extension_auto="1" />
+				<Option output="..\..\bin\Renamer-d" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\..\bin\" />
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
@@ -25,7 +25,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="..\..\bin\Renamer.exe" prefix_auto="1" extension_auto="1" />
+				<Option output="..\..\bin\Renamer" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Release\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -37,7 +37,7 @@
 				</Linker>
 			</Target>
 			<Target title="unitTest">
-				<Option output="..\..\bin\Renamer-u.exe" prefix_auto="1" extension_auto="1" />
+				<Option output="..\..\bin\Renamer-u" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\..\bin\" />
 				<Option object_output="obj\unitTest\" />
 				<Option type="1" />
@@ -48,10 +48,10 @@
 					<Add option="-DRENAMER_UNIT_TEST" />
 				</Compiler>
 				<Linker>
-					<Add library="libboost_unit_test_framework-mgw34-s-1_34" />
-					<Add library="libboost_Program_options-mgw34-s-1_34" />
-					<Add library="libboost_regex-mgw34-s-1_34" />
-					<Add library="libboost_filesystem-mgw34-s-1_34" />
+					<Add library="libboost_unit_test_framework-mgw34-mt-1_35" />
+					<Add library="libboost_Program_options-mgw34-mt-1_35" />
+					<Add library='&quot;libboost_regex-mgw34-mt-1_35&quot;' />
+					<Add library="libboost_filesystem-mgw34-mt-1_35" />
 					<Add library="SQLite" />
 				</Linker>
 			</Target>
@@ -96,6 +96,7 @@
 		</Unit>
 		<Extensions>
 			<code_completion />
+			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
