--- a/Renamer .NET/Renamer .NET.vcproj
+++ b/Renamer .NET/Renamer .NET.vcproj
@@ -255,6 +255,11 @@
 			AssemblyName="System.ServiceProcess, Version=2.0.0.0, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL"
 			MinFrameworkVersion="131072"
 		/>
+		<AssemblyReference
+			RelativePath="System.Runtime.Remoting.dll"
+			AssemblyName="System.Runtime.Remoting, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
+			MinFrameworkVersion="131072"
+		/>
 	</References>
 	<Files>
 		<Filter
@@ -440,6 +445,10 @@
 			</File>
 			<File
 				RelativePath=".\clrUtility.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IpcServerMethods.h"
 				>
 			</File>
 			<File
